resize actions dropdown to prevent editor-picker overflow (fixes #83)

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@ a { cursor: pointer; cursor: hand; }
 
 .cacheState { float: right; line-height: 52px; margin-right: 10px; font-size: 11px; }
 
-.actionsMenu { width: 224px; float: right; margin: 5px 10px; }
+.dk_options, .actionsMenu { width: 190px; }
+
+.actionsMenu { float: right; margin: 5px 10px; }
 .actionsButtons { margin: 5px 0; float: right; }
 .actionsButtons i { position: relative; top: 1px; }
 .actionsButtons .fui-new-16 { margin-right: 7px; }
